[tool.poetry]
name = "court-task"
version = "0.1.0"
description = ""
authors = ["dobauron <safetysafetystrazak@gmail.com>"]
readme = "README.md"
packages = [{include = "court_task"}]

[tool.poetry.dependencies]
python = "^3.10"
pysqlite3 = "^0.5.0"
black = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
